--- a/PartOne/style.css
+++ b/PartOne/style.css
@@ -4,9 +4,24 @@
 
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+    /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--secondary-color);
+    /* Track color */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--main-color);
+}
+
+
 ::selection {
     background-color: var(--main-color);
-    color: white;
+    color: var(--secondary-color);
 }
 
 html {
@@ -206,7 +221,7 @@ label,
 }
 
 .starter ul li i {
-    animation: infiniteRotate 0.9s ease-in-out infinite;
+    animation: infiniteRotate 1s ease-in-out infinite;
 }
 
 
@@ -244,30 +259,42 @@ label,
 }
 
 .image {
-    background-image: url(../Images/Ai.png);
-    max-width: 100%;
-    background-size: cover;
-    min-height: 100vh;
     position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
+
+.background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
 
 .image .text {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
     text-align: center;
 }
 
 .image .text h2 {
     font-size: 50px;
+    color: white;
 }
 
 .image .text p {
     margin-top: 40px;
     font-size: 20px;
     line-height: 1.4;
+    color: var(--secondary-color);
+    ;
 }
 
 .about {
