--- a/PartTwo/part2.css
+++ b/PartTwo/part2.css
@@ -8,6 +8,20 @@ html {
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+    /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--secondary-color);
+    /* Track color */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--main-color);
+}
+
 ::selection {
     background-color: var(--main-color);
     color: white;
@@ -69,7 +83,6 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     margin: 0;
-    padding-bottom: 20px;
 }
 
 .content {
@@ -181,4 +194,18 @@ label,
     padding: 10px;
     border-radius: 6px;
     transition: 0.5s;
+}
+
+footer {
+    background-color: var(--main-color);
+    margin: 0;
+    padding: 20px;
+    color: white;
+    text-align: center;
+    align-items: center;
+    font-size: 13px;
+}
+
+footer span {
+    font-weight: bold;
 }
