--- a/PartTwo/part2.css
+++ b/PartTwo/part2.css
@@ -147,6 +147,7 @@ select {
 #predict-btn:hover {
     color: var(--main-color);
     background-color: var(--secondary-color);
+    cursor: pointer;
 }
 
 #learning-rate,
