--- a/PartOne/style.css
+++ b/PartOne/style.css
@@ -215,6 +215,7 @@ label,
     justify-content: center;
     margin: 0;
     padding: 15px;
+    border-bottom: 2px solid var(--secondary-color);
 }
 
 .starter ul li {
@@ -264,6 +265,7 @@ label,
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    border-bottom: 2px solid var(--secondary-color);
 }
 
 .background-video {
@@ -384,6 +386,7 @@ label,
     text-align: center;
     padding: 40px;
     background-color: #f4f4f9;
+    border-top: solid 1px var(--secondary-color);
 }
 
 .creators-section h2 {
@@ -443,6 +446,7 @@ footer {
     text-align: center;
     align-items: center;
     font-size: 13px;
+    border-top: 2px solid #313c72;
 }
 
 footer span {
