--- a/PartTwo/part2.css
+++ b/PartTwo/part2.css
@@ -151,6 +151,9 @@ canvas {
     border: 1px solid black;
     margin-top: 20px;
     background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2),
+        0 8px 30px rgba(0, 0, 0, 0.15);
 }
 
 .form-container,
