--- a/PartOne/style.css
+++ b/PartOne/style.css
@@ -183,7 +183,7 @@ button {
 
 #multi-class-btn {
     width: 60px;
-    height: 40px;
+    height: 38.4px;
 }
 
 
@@ -428,7 +428,7 @@ label,
 .creator-card i {
     margin-top: 10px;
     font-size: 20px;
-    color: black;
+    color: var(--main-color);
     transition: 0.2s;
 }
 
