--- a/PartOne/style.css
+++ b/PartOne/style.css
@@ -458,7 +458,7 @@ footer span {
 
 #scrollToTop {
     position: fixed;
-    top: 45%;
+    bottom: 60px;
     transform: translateY(-50%);
     right: 40px;
     opacity: 0;
