--- a/PartOne/style.css
+++ b/PartOne/style.css
@@ -262,8 +262,8 @@ label,
 }
 
 @media (max-width:550px) {
-    .starter ul {
-        display: none;
+    .starter ul li {
+       display: none;
     }
 
 }
@@ -326,7 +326,31 @@ label,
     justify-content: space-evenly;
 }
 
-@media (max-width:900px) {
+@media (max-width: 1204px){
+    canvas {
+        width: 400px;
+    }
+}
+
+@media (max-width: 1100px){
+    .content {
+        margin-right: 76px;
+    }
+}
+
+@media (max-width:995px) {
+    .analyze-buttons {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+    }
+    .content{
+        margin:0 78px;
+    }
+    .image .text h2 {
+        margin-top: 20px;
+        font-size: 50px;
+    }
     .about .classes {
         flex-direction: column;
     }
@@ -345,7 +369,6 @@ label,
     }
 
     canvas {
-        width: 240px;
         margin: 0 auto;
     }
 
@@ -358,11 +381,32 @@ label,
     }
 
     .main-heading p {
-        font-size: 10px;
+        font-size: 14px;
     }
 
     .form-container {
         width: 200px;
+    }
+}
+
+@media (max-width: 597px){
+    .image .text p {
+        font-size: 17px;
+    }
+    .main-heading h2 {
+        font-size: 25px;
+    }
+
+    .main-heading p {
+        font-size: 12px;
+    }
+}
+@media (max-width: 497px) {
+    canvas {
+        width: 300px;
+    }
+    .image .text p {
+        font-size: 13px
     }
 }
 
@@ -468,6 +512,7 @@ footer span {
 
 #scrollToTop {
     position: fixed;
+    z-index: 5;
     bottom: 60px;
     transform: translateY(-50%);
     right: 40px;
