--- a/PartOne/style.css
+++ b/PartOne/style.css
@@ -2,6 +2,12 @@
     --main-color: #006699;
     --secondary-color: #e2e2e2;
     --dark-main: #025681;
+    --light-bg: #f4f4f9;
+    --light-txt: #1E201E;
+    --lighter-bg:#e2e2e2;
+    --canvas-light: #f4f4f9;
+    --creator-section:#f4f4f9;
+    --creator-text: #1E201E;
 }
 
 ::-webkit-scrollbar {
@@ -49,7 +55,7 @@ html {
     margin-bottom: 40px;
     position: relative;
     text-transform: uppercase;
-    color: black;
+    color: var(--light-txt);;
 }
 
 .main-heading h2::before {
@@ -74,23 +80,26 @@ html {
     left: 50%;
     transform: translateX(-50%);
     bottom: -25px;
-    background-color: white;
+    background-color: var(--light-bg);
 
 }
 
 .main-heading p {
     line-height: 1.6;
     width: 550px;
-    color: black;
+    color: var(--light-txt);;
     max-width: 100%;
     margin: 0 auto;
 }
 
 /* the rest of the design */
 
+.binary img, .multi img{
+    border-radius: 10px;
+}
 .content {
     position: relative;
-    color: white;
+    color: var(--light-bg);;
     text-align: center;
     z-index: 1;
     /* Ensures content appears above video */
@@ -103,6 +112,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 500;
     margin: 0;
+    background-color: var(--light-bg);
 }
 
 
@@ -116,9 +126,9 @@ body {
 }
 
 canvas {
-    border: 1px solid black;
+    border: 1px solid var(--light-txt);
     margin-top: 20px;
-    background-color: white;
+    background-color: var(--canvas-light);
     border-radius: 5px;
     box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2),
         0 8px 30px rgba(0, 0, 0, 0.15);
@@ -130,6 +140,11 @@ canvas {
     width: 300px;
 }
 
+input {
+    background-color: var(--lighter-bg);
+    color: var(--light-txt);
+    border: 1px solid var(--light-txt);
+}
 label,
 input,
 button {
@@ -140,7 +155,7 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #ffffff;
+    background-color: var(--light-bg);
     width: 100%;
     z-index: 10;
 }
@@ -197,7 +212,7 @@ nav {
 label,
 #accuracy,
 #binary-output-result {
-    color: black;
+    color: var(--light-txt);;
     font-weight: bold;
 }
 
@@ -216,10 +231,13 @@ label,
 }
 
 .starter {
-    background-color: white;
+    background-color: var(--light-bg);;
 }
 
+
+
 .starter ul {
+    position: relative;
     list-style: none;
     display: flex;
     justify-content: center;
@@ -232,12 +250,41 @@ label,
     margin-right: 70px;
 }
 
-.starter ul li i {
+.starter ul li #themeToggle{
+    border:none;
+    background-color: transparent;
+    cursor: pointer;
+}
+.starter ul li #code {
     cursor: pointer;
     animation: infiniteRotate 1s ease-in-out infinite;
     color: var(--main-color);
+    cursor: pointer;
+}
+.starter ul li #code:hover {
+    color: var(--secondary-color);
 }
 
+.starter ul #blist {
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+    display: none;
+} 
+.starter ul li i{
+    transition: 0.2s;
+}
+.starter ul li i:hover {
+    color: var(--secondary-color);
+}
+.starter ul li #blist:hover {
+    color: var(--secondary-color);
+}
+
+
+.starter ul li i {
+    color: var(--main-color);
+}
 
 @keyframes infiniteRotate {
     0% {
@@ -262,10 +309,12 @@ label,
 }
 
 @media (max-width:550px) {
-    .starter ul li {
+    /* #blist {
+        display: block;
+    } */
+    .starter ul{
        display: none;
     }
-
 }
 
 .starter ul a:hover {
@@ -281,15 +330,7 @@ label,
     background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(2,37,78,1) 0%, rgba(4,56,126,1) 19.7%, rgba(85,245,221,1) 100.2% );
 }
 
-.background-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-}
+
 
 
 
@@ -303,14 +344,14 @@ label,
 
 .image .text h2 {
     font-size: 75px;
-    color: white;
+    color: var(--light-bg);
 }
 
 .image .text p {
     margin-top: 40px;
     font-size: 20px;
     line-height: 1.4;
-    color: var(--secondary-color);
+    color: var(--light-bg);
     ;
 }
 
@@ -443,14 +484,14 @@ label,
 .creators-section {
     text-align: center;
     padding: 40px;
-    background-color: #f4f4f9;
+    background-color: var(--creator-section);
     border-top: solid 1px var(--secondary-color);
 }
 
 .creators-section h2 {
     font-size: 2em;
     margin-bottom: 20px;
-    color: #333;
+    color: var(--creator-text);
 }
 
 .creator-card {
@@ -460,24 +501,24 @@ label,
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    background-color: #fff;
+    background-color: var(--light-bg);
     transition: transform 0.3s ease;
 }
 
 .creators-section h2 {
     font-size: 2em;
     margin-bottom: 20px;
-    color: #333;
+    color: var(--light-txt); 
 }
 
 .creator-card h3 {
     font-size: 1.2em;
-    color: #333;
+    color: var(--light-txt); 
 }
 
 .creator-card p {
     font-size: 0.9em;
-    color: #666;
+    color: var(--light-txt); 
 }
 
 .creator-card i {
@@ -500,7 +541,7 @@ footer {
     background-color: var(--main-color);
     margin: 0;
     padding: 20px;
-    color: white;
+    color: var(--light-bg);
     text-align: center;
     align-items: center;
     font-size: 13px;
@@ -555,7 +596,7 @@ footer span {
    text-transform: uppercase;
    transition: 0.4s;
    background-size: 200% auto;
-   color: white;            
+   color: var(--light-bg);;            
    box-shadow: 0 0 20px #eee;
    border-radius: 10px;
    border: none;
