--- a/PartOne/style.css
+++ b/PartOne/style.css
@@ -158,7 +158,7 @@ button {
 nav {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     position: fixed;
     top: 0;
     left: 0;
