--- a/PartOne/style.css
+++ b/PartOne/style.css
@@ -162,11 +162,21 @@ nav {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: var(--light-bg);
     width: 100%;
     z-index: 10;
     box-shadow: 0 3px 21px -9px var(--main-color);
     border-bottom: 2px solid var(--secondary-color);
+    background-color: transparent;
+    transition: 0.3s;
+}
+
+nav.bck {
+    background-color: var(--light-bg);
+}
+
+nav.filter {
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
 }
 #learn-btn,
 #clear-btn,
